# herder-cli

./: .gitignore  Makefile  README.md  herder-instructions.md  main.py  mcp.config.json  pyproject.toml
utils/: llm.py
