[project]
name = "open-coder-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.12.3",
    "mcpadapt>=0.1.12",
    "ollama>=0.5.1",
    "prompt-toolkit>=3.0.51",
    "pyfiglet>=1.0.3",
    "smolagents>=1.20.0",
]
